# public_damage

./: README.md  pyproject.toml  requirements.txt
data/: README.md  subsample_1.fastq  subsample_2.fastq
notebooks/: Damage-Bayes-v1.ipynb  DamageBayes.ipynb
src/damage_bayes/: __init__.py  cli.py  counting.py  fastq.py  modeling.py
tests/: test_counting.py  test_fastq.py  test_modeling.py
